--- a/dimensionamento.htm
+++ b/dimensionamento.htm
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-    <h2>CamProject</h2>
+  <!--  <h2>CamProject</h2>-->
     <h3>Dimensionamento de Projetos de Segurança</h3>
     <span>Descubra qual o projeto de câmeras ideial para seu estabelecimento.</span>
     <hr>
