adicionando checkbox seleção
Checkbox para selecionar o que o usuário quer ver.

--- a/criaProj.html
+++ b/criaProj.html
@@ -4,8 +4,14 @@
 
  </head>
 
- <body onload="draw();">   
-   <canvas id="canvas" width="1000" height="1000"></canvas>v
+ <body onload="draw();">
+	
+	<input type="checkbox" name="Deteccao" value="detec" onclick="" checked>Detecção<br>
+	<input type="checkbox" name="Classificacao" value="class" onclick="" checked="">Classificação<br>
+	<input type="checkbox" name="Reconhecimento" value="recon" onclick="" checked="">Reconhecimento<br>
+	<input type="checkbox" name="Identificacao" value="ident" onclick="" checked="">Identificação<br>
+
+	<canvas id="canvas" width="1000" height="1000"></canvas>v
 
    <script language="JavaScript" src="criaProj.js"> </script>
 
