--- a/criaProj.html
+++ b/criaProj.html
@@ -6,14 +6,18 @@
 
  <body onload="draw();">
 	
-	<input type="checkbox" name="Deteccao" value="detec" onclick="" checked>Detecção<br>
-	<input type="checkbox" name="Classificacao" value="class" onclick="" checked="">Classificação<br>
-	<input type="checkbox" name="Reconhecimento" value="recon" onclick="" checked="">Reconhecimento<br>
-	<input type="checkbox" name="Identificacao" value="ident" onclick="" checked="">Identificação<br>
+	<input type="checkbox" name="Deteccao" value="deteccao" onclick="" checked="">Detecção<br>
+	<input type="checkbox" name="Classificacao" value="classificacao" onclick="" checked="">Classificação<br>
+	<input type="checkbox" name="Reconhecimento" value="reconhecimento" onclick="" checked="">Reconhecimento<br>
+	<input type="checkbox" name="Identificacao" value="identificacao" onclick="" checked="">Identificação<br>
+	<button id="rotDir" >Rotacionar 10º</button><br>
+	<button id="rotEsq" ">Rotacionar -10º</button><br>
+	<input type="number" name="abertura" id="mAbertura">Mudança de abertura em percentual<br>
 
-	<canvas id="canvas" width="1000" height="1000"></canvas>v
 
-   <script language="JavaScript" src="criaProj.js"> </script>
+	<canvas id="canvas" width="1000" height="1000"></canvas>
+
+   <script language="JavaScript" src="criaProjetoMVP.js"> </script>
 
  </body>
  
