--- a/criaProj.html
+++ b/criaProj.html
@@ -6,10 +6,10 @@
 
  <body onload="draw();">
 	
-	<input type="checkbox" name="Deteccao" value="deteccao" onclick="" checked="">Detecção<br>
-	<input type="checkbox" name="Classificacao" value="classificacao" onclick="" checked="">Classificação<br>
-	<input type="checkbox" name="Reconhecimento" value="reconhecimento" onclick="" checked="">Reconhecimento<br>
-	<input type="checkbox" name="Identificacao" value="identificacao" onclick="" checked="">Identificação<br>
+	<input type="checkbox" name="deteccao" value="deteccao" onclick="" checked="">Detecção<br>
+	<input type="checkbox" name="classificacao" value="classificacao" onclick="" checked="">Classificação<br>
+	<input type="checkbox" name="reconhecimento" value="reconhecimento" onclick="" checked="">Reconhecimento<br>
+	<input type="checkbox" name="identificacao" value="identificacao" onclick="" checked="">Identificação<br>
 	<button id="rotDir" >Rotacionar 10º</button><br>
 	<button id="rotEsq" ">Rotacionar -10º</button><br>
 	<input type="number" name="abertura" id="mAbertura">Mudança de abertura em percentual<br>
